cabal-version: 2.4

name:                  cardano-node-chairman
version:               1.25.0
description:           The cardano full node
author:                IOHK
maintainer:            operations@iohk.io
license:               Apache-2.0
license-files:         LICENSE
                       NOTICE
build-type:            Simple

common common-modules
  hs-source-dirs:       src
  other-modules:        Test.Base
                        Test.Process
                        Testnet.Byron
                        Testnet.ByronShelley
                        Testnet.Conf
                        Testnet.List
                        Testnet.Shelley

executable cardano-node-chairman
  hs-source-dirs:       app
  main-is:              cardano-node-chairman.hs
  other-modules:        Cardano.Chairman
                        Cardano.Chairman.Commands
                        Cardano.Chairman.Commands.Version
                        Cardano.Chairman.Commands.Run
                        Paths_cardano_node_chairman
  default-language:     Haskell2010
  ghc-options:          -threaded
                        -Wall
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
                        -Wpartial-fields
                        -Wcompat
                        -rtsopts
                        "-with-rtsopts=-T"
                        -Wno-unticked-promoted-constructors
  build-depends:        base >=4.12 && <5
                      , aeson                           >= 1.5.5.1
                      , async                           >= 2.2.2
                      , bytestring                      >= 0.10.10.0
                      , call-stack                      >= 0.2.0
                      , cardano-api                     >= 1.25.0
                      , cardano-config                  >= 0.1.0.0
                      , cardano-ledger                  >= 0.1.0.0
                      , cardano-node                    >= 1.25.0
                      , cardano-prelude                 >= 0.1.0.0
                      , containers                      >= 0.6.2.1
                      , contra-tracer                   >= 0.1.0.0
                      , directory                       >= 1.3.6.0
                      , exceptions                      >= 0.10.4
                      , filepath                        >= 1.4.2.1
                      , hedgehog                        >= 1.0.4
                      , hedgehog-extras                 >= 0.1.0.0
                      , hspec                           >= 2.7.6
                      , HUnit
                      , io-sim-classes                  >= 0.2.0.0
                      , mmorph                          >= 1.1.3
                      , mtl                             >= 2.2.2
                      , network                         >= 3.1.2.1
                      , network-mux                     >= 0.1.0.0
                      , optparse-applicative            >= 0.16.1.0
                      , ouroboros-consensus             >= 0.1.0.0
                      , ouroboros-consensus-cardano     >= 0.1.0.0
                      , ouroboros-network               >= 0.1.0.0
                      , ouroboros-network-framework     >= 0.1.0.0
                      , process                         >= 1.6.9.0
                      , random                          >= 1.1
                      , resourcet                       >= 1.2.4.2
                      , tasty                           >= 1.4.0.2
                      , tasty-hedgehog                  >= 1.0.0.2
                      , temporary                       >= 1.3
                      , text                            >= 1.2.3.2
                      , time                            >= 1.9.3
                      , transformers                    >= 0.5.6.2
                      , transformers-except             >= 0.1.1
                      , typed-protocols                 >= 0.1.0.0
                      , unliftio                        >= 0.2.13.1
                      , unordered-containers            >= 0.2.13.0

  default-extensions:   NoImplicitPrelude

  if os(windows)
     build-depends:     Win32
  else
     build-depends:     unix

test-suite chairman-tests
  import:               common-modules
  hs-source-dirs:       test
  main-is:              Main.hs
  type:                 exitcode-stdio-1.0
  if !os(windows)
      build-depends:    unix

  build-depends:        base >= 4.12 && < 5
                      , aeson                           >= 1.5.5.1
                      , async                           >= 2.2.2
                      , call-stack                      >= 0.2.0
                      , containers                      >= 0.6.2.1
                      , directory                       >= 1.3.6.0
                      , exceptions                      >= 0.10.4
                      , filepath                        >= 1.4.2.1
                      , hedgehog                        >= 1.0.4
                      , hedgehog-extras                 >= 0.1.0.0
                      , hspec                           >= 2.7.6
                      , HUnit
                      , mmorph                          >= 1.1.3
                      , mtl                             >= 2.2.2
                      , network                         >= 3.1.2.1
                      , process                         >= 1.6.9.0
                      , random                          >= 1.1
                      , resourcet                       >= 1.2.4.2
                      , tasty                           >= 1.4.0.2
                      , tasty-hedgehog                  >= 1.0.0.2
                      , temporary                       >= 1.3
                      , text                            >= 1.2.3.2
                      , time                            >= 1.9.3
                      , transformers                    >= 0.5.6.2
                      , unliftio                        >= 0.2.13.1
                      , unordered-containers            >= 0.2.13.0

  other-modules:        Spec.Chairman.Chairman
                        Spec.Chairman.Byron
                        Spec.Chairman.ByronShelley
                        Spec.Chairman.Shelley
                        Spec.Network

  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
  ghc-options:          -Wall
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
                        -Wpartial-fields
                        -Wcompat
                        -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
  build-tool-depends:   cardano-node:cardano-node
                      , cardano-cli:cardano-cli
                      , cardano-node-chairman:cardano-node-chairman

executable cardano-testnet
  import:               common-modules
  hs-source-dirs:       testnet
  main-is:              Main.hs
  if !os(windows)
      build-depends:    unix

  build-depends:        base >= 4.12 && < 5
                      , aeson                           >= 1.5.5.1
                      , ansi-terminal                   >= 0.11
                      , async                           >= 2.2.2
                      , call-stack                      >= 0.2.0
                      , cardano-config                  >= 0.1.0.0
                      , containers                      >= 0.6.2.1
                      , directory                       >= 1.3.6.0
                      , exceptions                      >= 0.10.4
                      , filepath                        >= 1.4.2.1
                      , hedgehog                        >= 1.0.4
                      , hedgehog-extras                 >= 0.1.0.0
                      , hspec                           >= 2.7.6
                      , HUnit
                      , mmorph                          >= 1.1.3
                      , network                         >= 3.1.2.1
                      , optparse-applicative            >= 0.16.1.0
                      , process                         >= 1.6.9.0
                      , random                          >= 1.1
                      , resourcet                       >= 1.2.4.2
                      , stm                             >= 2.5.0.0
                      , tasty                           >= 1.4.0.2
                      , tasty-hedgehog                  >= 1.0.0.2
                      , temporary                       >= 1.3
                      , text                            >= 1.2.3.2
                      , time                            >= 1.9.3
                      , unliftio                        >= 0.2.13.1
                      , unordered-containers            >= 0.2.13.0

  other-modules:        Paths_cardano_node_chairman
                        Testnet.Commands
                        Testnet.Commands.Byron
                        Testnet.Commands.ByronShelley
                        Testnet.Commands.Shelley
                        Testnet.Commands.Version
                        Testnet.Run
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
  ghc-options:          -Wall
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
                        -Wpartial-fields
                        -Wcompat
                        -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
