cabal-version: 3.0

name:                   cardano-node-chairman
version:                1.33.0
description:            The cardano full node
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple

common base                         { build-depends: base                             >= 4.14       && < 4.15     }

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unticked-promoted-constructors
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

executable cardano-node-chairman
  import:               base, project-config

  hs-source-dirs:       app
  main-is:              cardano-node-chairman.hs
  other-modules:        Cardano.Chairman
                        Cardano.Chairman.Commands
                        Cardano.Chairman.Commands.Version
                        Cardano.Chairman.Commands.Run
                        Paths_cardano_node_chairman
  ghc-options:          -threaded
                        -rtsopts
                        "-with-rtsopts=-T"
  build-depends:        bytestring
                      , cardano-api
                      , cardano-config
                      , cardano-ledger-byron
                      , cardano-node
                      , cardano-prelude
                      , containers
                      , contra-tracer
                      , io-classes
                      , network-mux
                      , optparse-applicative-fork
                      , ouroboros-consensus
                      , ouroboros-network
                      , ouroboros-network-framework
                      , strict-stm
                      , text
                      , time

test-suite chairman-tests
  import:               base, project-config

  hs-source-dirs:       test

  main-is:              Main.hs

  type:                 exitcode-stdio-1.0

  build-depends:        cardano-testnet
                      , filepath
                      , hedgehog
                      , hedgehog-extras
                      , network
                      , process
                      , random
                      , resourcet
                      , tasty
                      , tasty-hedgehog
                      , unliftio

  other-modules:        Spec.Chairman.Chairman
                        Spec.Chairman.Byron
                        Spec.Chairman.Cardano
                        Spec.Chairman.Shelley
                        Spec.Network

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

  build-tool-depends:   cardano-node:cardano-node
                      , cardano-cli:cardano-cli
                      , cardano-node-chairman:cardano-node-chairman
