cabal-version: 3.0

name:                   cardano-node-chairman
version:                1.36.0
synopsis:               The cardano full node
description:            The cardano full node.
category:               Cardano,
                        Test,
copyright:              2023 Input Output (Hong Kong) Ltd.
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
  build-depends:        base >= 4.14 && < 4.15

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unticked-promoted-constructors
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

executable cardano-node-chairman
  import:               project-config

  hs-source-dirs:       app
  main-is:              cardano-node-chairman.hs
  other-modules:        Cardano.Chairman
                        Cardano.Chairman.Commands
                        Cardano.Chairman.Commands.Version
                        Cardano.Chairman.Commands.Run
  other-modules:        Paths_cardano_node_chairman
  autogen-modules:      Paths_cardano_node_chairman
  ghc-options:          -threaded
                        -rtsopts
                        "-with-rtsopts=-T"
  build-depends:        cardano-api
                      , cardano-git-rev
                      , cardano-node
                      , cardano-prelude
                      , containers
                      , contra-tracer
                      , io-classes ^>= 0.3
                      , optparse-applicative-fork
                      , ouroboros-consensus
                      , ouroboros-network-api
                      , ouroboros-network-protocols
                      , strict-stm
                      , text
                      , time

test-suite chairman-tests
  import:               project-config

  hs-source-dirs:       test

  main-is:              Main.hs

  type:                 exitcode-stdio-1.0

  build-depends:        cardano-testnet
                      , directory
                      , filepath
                      , hedgehog
                      , hedgehog-extras
                      , network
                      , process
                      , random
                      , resourcet
                      , tasty
                      , tasty-hedgehog
                      , unliftio

  other-modules:        Spec.Chairman.Chairman
                        Spec.Chairman.Cardano
                        Spec.Network

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

  build-tool-depends:   cardano-node:cardano-node
                      , cardano-cli:cardano-cli
                      , cardano-node-chairman:cardano-node-chairman
