cabal-version: 2.4

name:                  cardano-node
version:               1.25.0
description:           The cardano full node
author:                IOHK
maintainer:            operations@iohk.io
license:               Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type:            Simple
extra-source-files:    ChangeLog.md

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

flag systemd
  description: Enable systemd support
  default:     True
  manual:      False

library
  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  if os(linux) && flag(systemd)
    cpp-options: -DSYSTEMD
    build-depends:     lobemo-scribe-systemd
                     , systemd

  hs-source-dirs:      src

  exposed-modules:     Cardano.Node.Configuration.Logging
                       Cardano.Node.Configuration.POM
                       Cardano.Node.Configuration.Topology
                       Cardano.Node.Handlers.Shutdown
                       Cardano.Node.Handlers.TopLevel
                       Cardano.Node.Orphans
                       Cardano.Node.Protocol
                       Cardano.Node.Protocol.Byron
                       Cardano.Node.Protocol.Cardano
                       Cardano.Node.Protocol.Shelley
                       Cardano.Node.Protocol.Pivo
                       Cardano.Node.Protocol.Types
                       Cardano.Node.Query
                       Cardano.Node.Parsers
                       Cardano.Node.Run
                       Cardano.Node.STM
                       Cardano.Node.Types
                       Cardano.Tracing.Config
                       Cardano.Tracing.Constraints
                       Cardano.Tracing.ConvertTxId
                       Cardano.Tracing.Kernel
                       Cardano.Tracing.Metrics
                       Cardano.Tracing.Peer
                       Cardano.Tracing.Queries
                       Cardano.Tracing.Render
                       Cardano.Tracing.Tracers
                       Cardano.Tracing.OrphanInstances.Byron
                       Cardano.Tracing.OrphanInstances.Common
                       Cardano.Tracing.OrphanInstances.Consensus
                       Cardano.Tracing.OrphanInstances.HardFork
                       Cardano.Tracing.OrphanInstances.Network
                       Cardano.Tracing.OrphanInstances.Shelley
                       Cardano.Tracing.OrphanInstances.Pivo


  other-modules:       Paths_cardano_node
                       Cardano.Node.Configuration.Socket
                       Cardano.Tracing.MicroBenchmarking

  build-depends:       aeson
                     , async
                     , base >=4.12 && <5
                     , base16-bytestring
                     , byron-spec-ledger
                     , bytestring
                     , deepseq
                     , cardano-api
                     , cardano-config
                     , cardano-crypto-class
                     , cardano-crypto-wrapper
                     , cardano-ledger
                     , cardano-ledger-shelley-ma
                     , cardano-ledger-pivo
                     , small-steps
                     , cardano-prelude
                     , cardano-slotting
                     , contra-tracer
                     , cborg >= 0.2.4 && < 0.3
                     , containers
                     , directory
                     , dns
                     , filepath
                     , generic-data
                     , hedgehog-extras
                     , hostname
                     , iproute
                     , io-sim-classes
                     , iohk-monitoring
                     , lobemo-backend-aggregation
                     , lobemo-backend-ekg
                     , lobemo-backend-monitoring
                     , lobemo-backend-trace-forwarder
                     , network
                     , network-mux
                     , nothunks
                     , optparse-applicative
                     , ouroboros-consensus
                     , ouroboros-consensus-byron
                     , ouroboros-consensus-cardano
                     , ouroboros-consensus-shelley
                     , ouroboros-network
                     , ouroboros-network-framework
                     , process
                     , safe-exceptions
                     , scientific
                     , shelley-spec-ledger
                     , stm
                     , strict-concurrency
                     , text
                     , time
                     , tracer-transformers
                     , transformers
                     , transformers-except
                     , unordered-containers
                     , yaml


  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wcompat

  -- Pattern match checking has improved since 8.6.5. GHC now considers more
  -- pattern matches as redundant than before, so disable this warning for older
  -- versions of GHC that still consider them incomplete.
  if impl(ghc < 8.10)
    ghc-options:       -Wno-incomplete-patterns

  if os(windows)
    build-depends:    Win32
  else
    build-depends:     unix

executable cardano-node
  hs-source-dirs:      app
  main-is:             cardano-node.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wcompat
                       -Wno-unticked-promoted-constructors
                       -rtsopts
  if arch(arm)
    ghc-options:         "-with-rtsopts=-T -I0 -N1 -A16m"
  else
    ghc-options:         "-with-rtsopts=-T -I0 -N2 -A16m"

  other-modules:       Paths_cardano_node

  build-depends:       base >=4.12 && <5
                     , cardano-config
                     , cardano-node
                     , cardano-prelude
                     , optparse-applicative
                     , text

  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

test-suite cardano-node-test
  hs-source-dirs:       test
  main-is:              cardano-node-test.hs
  type:                 exitcode-stdio-1.0

  if !os(windows)
      build-depends:     unix

  build-depends:
                        base >= 4.12 && < 5
                      , aeson
                      , async
                      , bytestring
                      , cardano-api
                      , cardano-config
                      , cardano-crypto-class
                      , cardano-crypto-test
                      , cardano-crypto-wrapper
                      , cardano-node
                      , cardano-prelude
                      , cardano-prelude-test
                      , cardano-slotting
                      , containers
                      , cryptonite
                      , directory
                      , hedgehog
                      , hedgehog-corpus
                      , iproute
                      , mmorph
                      , network
                      , ouroboros-consensus
                      , ouroboros-consensus-shelley
                      , ouroboros-network
                      , process
                      , random
                      , resourcet
                      , shelley-spec-ledger
                      , shelley-spec-ledger-test
                      , temporary
                      , time
                      , unliftio

  other-modules:        Test.Cardano.Node.FilePermissions
                        Test.Cardano.Node.Gen
                        Test.Cardano.Node.Json
                        Test.Cardano.Node.POM

  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude

  ghc-options:          -Wall
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
                        -Wpartial-fields
                        -Wcompat
                        -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
