cabal-version: 3.0

name:                   cardano-node
version:                1.36.0
synopsis:               The cardano full node
description:            The cardano full node.
category:               Cardano,
                        Validator,
copyright:              2023 Input Output (Hong Kong) Ltd.
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple
extra-source-files:     ChangeLog.md

Flag unexpected_thunks
  Description:          Turn on unexpected thunks checks
  Default:              False

flag systemd
  description:          Enable systemd support
  default:              True
  manual:               False

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings
  build-depends:        base >= 4.14 && < 4.15

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unticked-promoted-constructors
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

common maybe-Win32
  if os(windows)
    build-depends:      Win32

common maybe-unix
  if !os(windows)
    build-depends:      unix

library
  import:               project-config
                      , maybe-unix
                      , maybe-Win32
  if flag(unexpected_thunks)
    cpp-options:        -DUNEXPECTED_THUNKS

  if os(linux) && flag(systemd)
    cpp-options:        -DSYSTEMD
    build-depends:      lobemo-scribe-systemd
                      , systemd

  hs-source-dirs:       src

  exposed-modules:      Cardano.Node.Configuration.Logging
                        Cardano.Node.Configuration.NodeAddress
                        Cardano.Node.Configuration.POM
                        Cardano.Node.Configuration.Socket
                        Cardano.Node.Configuration.Topology
                        Cardano.Node.Configuration.TopologyP2P
                        Cardano.Node.Handlers.Shutdown
                        Cardano.Node.Handlers.TopLevel
                        Cardano.Node.Orphans
                        Cardano.Node.Protocol
                        Cardano.Node.Protocol.Alonzo
                        Cardano.Node.Protocol.Byron
                        Cardano.Node.Protocol.Cardano
                        Cardano.Node.Protocol.Shelley
                        Cardano.Node.Protocol.Types
                        Cardano.Node.Parsers
                        Cardano.Node.Queries
                        Cardano.Node.Run
                        Cardano.Node.STM
                        Cardano.Node.Startup
                        Cardano.Node.TraceConstraints
                        Cardano.Node.Tracing
                        Cardano.Node.Types
                        Cardano.Node.Tracing.API
                        Cardano.Node.Tracing.Compat
                        Cardano.Node.Tracing.DefaultTraceConfig
                        Cardano.Node.Tracing.Documentation
                        Cardano.Node.Tracing.Era.Byron
                        Cardano.Node.Tracing.Era.HardFork
                        Cardano.Node.Tracing.Era.Shelley
                        Cardano.Node.Tracing.Peers
                        Cardano.Node.Tracing.StateRep
                        Cardano.Node.Tracing.Tracers
                        Cardano.Node.Tracing.Tracers.BlockReplayProgress
                        Cardano.Node.Tracing.Tracers.ChainDB
                        Cardano.Node.Tracing.Tracers.Consensus
                        Cardano.Node.Tracing.Tracers.ConsensusStartupException
                        Cardano.Node.Tracing.Tracers.Diffusion
                        Cardano.Node.Tracing.Tracers.KESInfo
                        Cardano.Node.Tracing.Tracers.StartLeadershipCheck
                        Cardano.Node.Tracing.Tracers.ForgingThreadStats
                        Cardano.Node.Tracing.Tracers.Resources
                        Cardano.Node.Tracing.Tracers.Peer
                        Cardano.Node.Tracing.Tracers.Startup
                        Cardano.Node.Tracing.Tracers.Shutdown
                        Cardano.Node.Tracing.Tracers.P2P
                        Cardano.Node.Tracing.Tracers.NonP2P
                        Cardano.Node.Tracing.Tracers.NodeToClient
                        Cardano.Node.Tracing.Tracers.NodeToNode
                        Cardano.Node.Tracing.Formatting
                        Cardano.Node.Tracing.Render
                        Cardano.Tracing.Config
                        Cardano.Tracing.Metrics
                        Cardano.Tracing.Peer
                        Cardano.Tracing.Render
                        Cardano.Tracing.Startup
                        Cardano.Tracing.Shutdown
                        Cardano.Tracing.Tracers
                        Cardano.Tracing.OrphanInstances.Byron
                        Cardano.Tracing.OrphanInstances.Common
                        Cardano.Tracing.OrphanInstances.Consensus
                        Cardano.Tracing.OrphanInstances.HardFork
                        Cardano.Tracing.OrphanInstances.Network
                        Cardano.Tracing.OrphanInstances.Shelley

  other-modules:        Paths_cardano_node
  autogen-modules:      Paths_cardano_node

  build-depends:        aeson             >= 1.5.6.0
                      , async
                      , base16-bytestring
                      , bytestring
                      , cardano-api
                      , cardano-data ^>= 0.1
                      , cardano-git-rev
                      , cardano-crypto-class ^>= 2.0
                      , cardano-crypto-wrapper ^>= 1.4
                      , cardano-ledger-core ^>= 0.1
                      , cardano-ledger-byron ^>= 0.1
                      , cardano-ledger-shelley ^>= 0.1
                      , cardano-ledger-shelley-ma ^>= 0.1
                      , cardano-ledger-alonzo ^>= 0.1
                      , cardano-ledger-babbage ^>= 0.1
                      , cardano-prelude
                      , cardano-protocol-tpraos ^>= 0.1
                      , cardano-slotting ^>= 0.1
                      , cborg ^>= 0.2.4
                      , contra-tracer
                      , containers
                      , directory
                      , dns
                      , ekg
                      , ekg-core
                      , filepath
                      , generic-data
                      , hostname
                      , iproute
                      , io-classes ^>= 0.3
                      , iohk-monitoring
                      , lobemo-backend-aggregation
                      , lobemo-backend-ekg
                      , lobemo-backend-monitoring
                      , lobemo-backend-trace-forwarder
                      , network
                      , network-mux ^>= 0.2
                      , nothunks
                      , optparse-applicative-fork
                      , ouroboros-consensus ^>= 0.1.0.2
                      , ouroboros-consensus-byron
                      , ouroboros-consensus-cardano
                      , ouroboros-consensus-protocol
                      , ouroboros-consensus-shelley
                      , ouroboros-network  ^>= 0.2
                      , ouroboros-network-framework ^>= 0.2
                      , psqueues
                      , safe-exceptions
                      , scientific
                      , strict-stm
                      , stm
                      , text
                      , time
                      , tracer-transformers
                      , trace-dispatcher
                      , trace-forward
                      , trace-resources
                      , transformers
                      , transformers-except
                      , typed-protocols ^>= 0.1
                      , yaml

executable cardano-node
  import:               project-config
  hs-source-dirs:       app
  main-is:              cardano-node.hs
  ghc-options:          -threaded
                        -rtsopts

  if arch(arm)
    ghc-options:        "-with-rtsopts=-T -I0 -A16m -N1 --disable-delayed-os-memory-return"
  else
    ghc-options:        "-with-rtsopts=-T -I0 -A16m -N2 --disable-delayed-os-memory-return"

  other-modules:        Paths_cardano_node
  autogen-modules:      Paths_cardano_node

  build-depends:        cardano-git-rev
                      , cardano-node
                      , cardano-prelude
                      , optparse-applicative-fork
                      , text

test-suite cardano-node-test
  import:               project-config
                      , maybe-unix
  hs-source-dirs:       test
  main-is:              cardano-node-test.hs
  type:                 exitcode-stdio-1.0

  build-depends:        aeson             >= 1.5.6.0
                      , bytestring
                      , cardano-api
                      , cardano-node
                      , cardano-prelude
                      , cardano-slotting ^>= 0.1
                      , directory
                      , hedgehog
                      , hedgehog-corpus
                      , iproute
                      , ouroboros-consensus
                      , ouroboros-network
                      , time
                      , vector

  other-modules:        Test.Cardano.Node.FilePermissions
                        Test.Cardano.Node.Gen
                        Test.Cardano.Node.Json
                        Test.Cardano.Node.POM

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
