cabal-version: 3.0

name:                   cardano-node
version:                9.1.1
synopsis:               The cardano full node
description:            The cardano full node.
category:               Cardano,
                        Validator,
copyright:              2019-2023 Input Output Global Inc (IOG), 2023-2024 Intersect.
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple
extra-doc-files:        ChangeLog.md

Flag unexpected_thunks
  Description:          Turn on unexpected thunks checks
  Default:              False

flag systemd
  description:          Enable systemd support
  default:              True
  manual:               False

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
  build-depends:        base >= 4.14 && < 5

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unticked-promoted-constructors
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
common maybe-Win32
  if os(windows)
    build-depends:      Win32

common maybe-unix
  if !os(windows)
    build-depends:      unix

common text
  if impl(ghc == 8.10.7) && os(darwin) && arch(aarch64)
    build-depends: text >= 1.2.5.0
  else
    build-depends: text >= 2.0

library
  import:               project-config
                      , maybe-unix
                      , maybe-Win32
                      , text
  if flag(unexpected_thunks)
    cpp-options:        -DUNEXPECTED_THUNKS

  if os(linux) && flag(systemd)
    cpp-options:        -DSYSTEMD
    build-depends:      lobemo-scribe-systemd
                      , systemd >= 2.3.0

  hs-source-dirs:       src

  exposed-modules:      Cardano.Node.Configuration.Logging
                        Cardano.Node.Configuration.NodeAddress
                        Cardano.Node.Configuration.POM
                        Cardano.Node.Configuration.Socket
                        Cardano.Node.Configuration.Topology
                        Cardano.Node.Configuration.TopologyP2P
                        Cardano.Node.Handlers.Shutdown
                        Cardano.Node.Handlers.TopLevel
                        Cardano.Node.Orphans
                        Cardano.Node.Parsers
                        Cardano.Node.Pretty
                        Cardano.Node.Protocol
                        Cardano.Node.Protocol.Alonzo
                        Cardano.Node.Protocol.Byron
                        Cardano.Node.Protocol.Cardano
                        Cardano.Node.Protocol.Conway
                        Cardano.Node.Protocol.Shelley
                        Cardano.Node.Protocol.Types
                        Cardano.Node.Queries
                        Cardano.Node.Run
                        Cardano.Node.Startup
                        Cardano.Node.STM
                        Cardano.Node.TraceConstraints
                        Cardano.Node.Tracing
                        Cardano.Node.Tracing.API
                        Cardano.Node.Tracing.Consistency
                        Cardano.Node.Tracing.Compat
                        Cardano.Node.Tracing.DefaultTraceConfig
                        Cardano.Node.Tracing.Documentation
                        Cardano.Node.Tracing.Era.Byron
                        Cardano.Node.Tracing.Era.HardFork
                        Cardano.Node.Tracing.Era.Shelley
                        Cardano.Node.Tracing.Formatting
                        Cardano.Node.Tracing.Peers
                        Cardano.Node.Tracing.Render
                        Cardano.Node.Tracing.StateRep
                        Cardano.Node.Tracing.Tracers
                        Cardano.Node.Tracing.Tracers.BlockReplayProgress
                        Cardano.Node.Tracing.Tracers.ChainDB
                        Cardano.Node.Tracing.Tracers.Consensus
                        Cardano.Node.Tracing.Tracers.ConsensusStartupException
                        Cardano.Node.Tracing.Tracers.Diffusion
                        Cardano.Node.Tracing.Tracers.ForgingThreadStats
                        Cardano.Node.Tracing.Tracers.KESInfo
                        Cardano.Node.Tracing.Tracers.NodeToClient
                        Cardano.Node.Tracing.Tracers.NodeToNode
                        Cardano.Node.Tracing.Tracers.NodeVersion
                        Cardano.Node.Tracing.Tracers.NonP2P
                        Cardano.Node.Tracing.Tracers.P2P
                        Cardano.Node.Tracing.Tracers.Peer
                        Cardano.Node.Tracing.Tracers.Resources
                        Cardano.Node.Tracing.Tracers.Shutdown
                        Cardano.Node.Tracing.Tracers.StartLeadershipCheck
                        Cardano.Node.Tracing.Tracers.Startup
                        Cardano.Node.Types
                        Cardano.Tracing.Config
                        Cardano.Tracing.HasIssuer
                        Cardano.Tracing.Metrics
                        Cardano.Tracing.OrphanInstances.Byron
                        Cardano.Tracing.OrphanInstances.Common
                        Cardano.Tracing.OrphanInstances.Consensus
                        Cardano.Tracing.OrphanInstances.HardFork
                        Cardano.Tracing.OrphanInstances.Network
                        Cardano.Tracing.OrphanInstances.Shelley
                        Cardano.Tracing.Peer
                        Cardano.Tracing.Render
                        Cardano.Tracing.Shutdown
                        Cardano.Tracing.Startup
                        Cardano.Tracing.Tracers

  other-modules:        Paths_cardano_node
  autogen-modules:      Paths_cardano_node

  build-depends:        base
                      , aeson >= 2.1.0.0
                      , async
                      , base16-bytestring
                      , bytestring
                      , cardano-api ^>= 9.1
                      , cardano-crypto-class
                      , cardano-crypto-wrapper
                      , cardano-git-rev ^>=0.2.2
                      , cardano-ledger-alonzo
                      , cardano-ledger-allegra
                      , cardano-ledger-api
                      , cardano-ledger-babbage
                      , cardano-ledger-binary
                      , cardano-ledger-byron
                      , cardano-ledger-conway
                      , cardano-ledger-core
                      , cardano-ledger-shelley
                      , cardano-prelude
                      , cardano-protocol-tpraos >= 1.0.2
                      , cardano-slotting >= 0.2
                      , cborg ^>= 0.2.4
                      , containers
                      , contra-tracer
                      , data-default-class
                      , deepseq
                      , directory
                      , dns
                      , ekg
                      , ekg-core
                      , filepath
                      , formatting
                      , generic-data
                      , hostname
                      , io-classes >= 1.4
                      , iohk-monitoring ^>= 0.1
                      , iproute
                      , lobemo-backend-aggregation
                      , lobemo-backend-ekg ^>= 0.1
                      , lobemo-backend-monitoring
                      , lobemo-backend-trace-forwarder
                      , mtl
                      , network
                      , network-mux >= 0.4
                      , nothunks
                      , optparse-applicative-fork >= 0.18.1
                      , ouroboros-consensus ^>= 0.20
                      , ouroboros-consensus-cardano ^>= 0.18
                      , ouroboros-consensus-diffusion ^>= 0.17
                      , ouroboros-consensus-protocol
                      , ouroboros-network-api ^>= 0.7.3
                      , ouroboros-network ^>= 0.16.1
                      , ouroboros-network-framework
                      , ouroboros-network-protocols ^>= 0.9
                      , prettyprinter
                      , prettyprinter-ansi-terminal
                      , psqueues
                      , safe-exceptions
                      , scientific
                      , si-timers
                      , sop-core
                      , stm
                      , strict-sop-core
                      , strict-stm
                      , time
                      , trace-dispatcher ^>= 2.5.8
                      , trace-forward ^>= 2.2.6
                      , trace-resources ^>= 0.2.2
                      , tracer-transformers
                      , transformers
                      , transformers-except
                      , typed-protocols >= 0.1
                      , yaml

executable cardano-node
  import:               project-config
  hs-source-dirs:       app
  main-is:              cardano-node.hs
  ghc-options:          -threaded
                        -rtsopts

  if arch(arm)
    ghc-options:        "-with-rtsopts=-T -I0 -A16m -N1 --disable-delayed-os-memory-return"
  else
    ghc-options:        "-with-rtsopts=-T -I0 -A16m -N2 --disable-delayed-os-memory-return"

  other-modules:        Paths_cardano_node
  autogen-modules:      Paths_cardano_node

  build-depends:        base
                      , cardano-crypto-class
                      , cardano-git-rev
                      , cardano-node
                      , optparse-applicative-fork
                      , text

test-suite cardano-node-test
  import:               project-config
                      , maybe-unix
  hs-source-dirs:       test
  main-is:              cardano-node-test.hs
  type:                 exitcode-stdio-1.0

  build-depends:        base
                      , aeson
                      , bytestring
                      , cardano-crypto-class
                      , cardano-crypto-wrapper
                      , cardano-api:{cardano-api, internal}
                      , cardano-ledger-core
                      , cardano-node
                      , cardano-slotting
                      , directory
                      , filepath
                      , hedgehog
                      , hedgehog-corpus
                      , hedgehog-extras
                      , iproute
                      , mtl
                      , ouroboros-consensus
                      , ouroboros-consensus-cardano
                      , ouroboros-consensus-diffusion
                      , ouroboros-network
                      , ouroboros-network-api
                      , strict-sop-core
                      , text
                      , time
                      , transformers
                      , vector
                      , yaml

  other-modules:        Test.Cardano.Config.Mainnet
                        Test.Cardano.Node.FilePermissions
                        Test.Cardano.Node.Gen
                        Test.Cardano.Node.Json
                        Test.Cardano.Node.POM
                        Test.Cardano.Tracing.NewTracing.Consistency
                        Test.Cardano.Tracing.OrphanInstances.HardFork

  ghc-options:          -threaded -rtsopts "-with-rtsopts=-N -T"
